      are now automatically disabled. To re-enable them, the missing
      dependencies should be added as buildRequires. (CNY-2175)
    * Build actions that don't match anything (r.Move, r.Copy etc) will
      now log exactly what they were trying to do. (CNY-2216)

  o Bug Fixes:
    * A minor bug in the display of the password prompt has been fixed.
      (CNY-2497)

  o Other changes:
    * The file EULA_Conary.txt has been added to clarify that Conary
      is available under two licenses, and to state the conditions
      under which the two licenses apply.


Changes in 2.0.5:
  o Client Changes:
    * Conary now attempts to provide hints about flavor combinations that would
      work if it cannot find a flavor that matches your exact request 
      (CNY-1920).
    * The rollback API now raises a RollbackError instead of returning
      non-zero on errors. (CNY-1643)

  o Build Changes:
    * When file conflicts occur while cooking groups, the deps that
      caused a package to be pulled in are listed. (CNY-2308)
    * Config policy will automatically append a newline to non-binary files.
      Files that are marked as Config and appear to be binary will
      continue to trigger an error as they have previously. (CNY-2422)
    * Perl requirements that are not present on the system or provided by
      the package being built are dropped. (CNY-2180)
    * Two expansion functions have been introduced to package recipes:
      r.glob and r.regexp. These functions return an object that can be
      substituted for any API parameter that calls for a string based
      regexp or glob. (CNY-2222)
    * Group recipe actions like "r.addAll" and "r.addCopy" now record
      the version of the group that is being copied from into the newly
      created group. (CNY-2359)
    * Add code to display new-style metadata through rq, q, and showchangeset,
      as well as propagate that metadata via cooking, promoting, shadowing,