@@ -1,4 +1,4 @@
-# Copyright (c) 2004-2007 rPath, Inc.
+# Copyright (c) 2004-2008 rPath, Inc.
 #
 # This program is distributed under the terms of the Common Public License,
 # version 1.0. A copy of this license should have been distributed with this
@@ -13,6 +13,7 @@
 
 import base64
 import itertools
+import fnmatch
 import os
 import re
 import sys
@@ -3122,6 +3123,32 @@ class HiddenException(Exception):
         self.forLog = forLog
         self.forReturn = forReturn
 
+class GlobListType(list):
+
+    def __del__(self):
+        raise NotImplementedError
+
+    def __init__(self, *args):
+        list.__init__(self, *args)
+        self.matchCache = set()
+
+    def __getstate__(self):
+        return list(self)
+
+    def __setstate__(self, state):
+        self += state
+
+    def __contains__(self, item):
+        if item in self.matchCache:
+            return True
+
+        for glob in self:
+            if fnmatch.fnmatch(item, glob):
+                self.matchCache.add(item)
+                return True
+
+        return False
+
 class ServerConfig(ConfigFile):
     authCacheTimeout        = CfgInt
     bugsToEmail             = CfgString
@@ -3146,7 +3173,7 @@ class ServerConfig(ConfigFile):
     repositoryDB            = dbstore.CfgDriver
     repositoryMap           = CfgRepoMap
     requireSigs             = CfgBool
-    serverName              = CfgLineList(CfgString)
+    serverName              = CfgLineList(CfgString, listType = GlobListType)
     staticPath              = (CfgPath, '/conary-static')
     serializeCommits        = (CfgBool, False)
     tmpDir                  = (CfgPath, '/var/tmp')
